5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1594_2425.log
== TEST (2019-06-25 22:15:09) 
-- CODE:
d=500
x=35
a=d/x
print(a)
-- OUTPUT:
14.285714285714286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:18:34) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3),"Km/l"))
-- OUTPUT:
(14.286, 'Km/l')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:18:53) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3)"Km/l"))
-- ERROR:
File "XXXX", line 4
    print((round(a,3)"Km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:18:59) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3)+"Km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((round(a,3)+"Km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:19:17) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3) +"Km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((round(a,3) +"Km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:19:31) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3),"Km/l"))
-- OUTPUT:
(14.286, 'Km/l')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:19:49) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3) "Km/l"))
-- ERROR:
File "XXXX", line 4
    print((round(a,3) "Km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:20:12) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3),Km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((round(a,3),Km/l))
NameError: name 'Km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:20:41) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x,'Km/l'
print((round(a,3))
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:20:46) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x,'Km/l'
print((round(a,3))
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:21:09) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=(d/x +'Km/l')
print((round(a,3))
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:21:16) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=(d/x)
print((round(a,3))
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:22:18) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,"Km/l",3))
-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:22:45) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3)"Km/l")
-- ERROR:
File "XXXX", line 4
    print((round(a,3)"Km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:22:53) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print((round(a,3),"Km/l")
-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:23:12) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print(round(a,3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:23:27) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print(round(a,3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:23:31) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print(round(a,3),"Km/l")
-- EXECUTION TIME:
0.866755
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:23:38) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print(round(a,3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:23:56) 
-- CODE:
d=float(input('d'))
x=float(input('a'))
a=d/x
print(round(a,3),"km/l")
-- EXECUTION TIME:
0.787545
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
